# rs-compose

./: 1.tmp  AGENTS.md  Cargo.toml  NEXT_SESSION_CONTEXT.md  NEXT_TASK.md  README.md  SCROLL_IN_COMPOSE_KT.md  SCROLL_IN_RS_COMPOSE.md  SNAPSHOTS_AND_SLOTS.md  all_to_txt.sh  code_review.md  modifier_match_with_jc.md  review_mitigation.md  robot_test_summary.txt  run_robot_test.sh
apps/android-demo/: AndroidManifest.xml  Cargo.toml  README.md
apps/android-demo/android/: .gitignore  build.gradle.kts  settings.gradle.kts
apps/android-demo/src/: lib.rs
apps/desktop-demo/: Cargo.toml  README.md  WEB_REQUIREMENTS.md  build-web.sh  diagnose-web.sh  index.html  run_robot_tests.sh
apps/desktop-demo/.cargo/: config.toml
apps/desktop-demo/examples/: robot_demo.rs  robot_interactive.rs  test_recorder.rs
apps/desktop-demo/robot-runners/: absent_gradient_area_recording.rs  no_fling_recording.rs  robot_advance_frame_bug.rs  robot_async_pause.rs  robot_async_tab_bug.rs  robot_click_drag.rs  robot_composition_local_disappear.rs  robot_content_type_reuse.rs  robot_copy_paste.rs  robot_demo.rs  robot_double_click.rs  robot_drag_selection.rs  robot_fling.rs  robot_fling_edge_cases.rs  robot_fling_precise.rs  robot_gradient_tab_switch.rs  robot_increment_bug.rs  robot_interactive.rs  robot_lazy_complex_scroll.rs  robot_lazy_duplication_bug.rs  robot_lazy_extreme_nav.rs  robot_lazy_fixes.rs  robot_lazy_infinite_scroll.rs  robot_lazy_items_provider.rs  robot_lazy_items_rc.rs  robot_lazy_lifecycle.rs  robot_lazy_list.rs  robot_lazy_list_after_modifiers.rs  robot_lazy_list_end_alignment.rs  robot_lazy_list_end_start_dup.rs  robot_lazy_list_order_bug.rs  robot_lazy_list_remove_dup.rs  robot_lazy_list_state_reactivity.rs  robot_lazy_max_demo.rs  robot_lazy_max_jump.rs  robot_lazy_perf.rs  robot_lazy_perf_validation.rs  robot_lazy_recursive_composition.rs  robot_lazy_scroll_edge_cases.rs  robot_lazy_stats.rs  (+30 more)
apps/desktop-demo/src/: app.rs  fonts.rs  lib.rs  main.rs  minesweeper.rs
apps/desktop-demo/tests/: composition_local_dup_test.rs  modifier_showcase_layout_tests.rs  modifier_showcase_rendering_tests.rs  modifier_showcase_tests.rs  multipass_dispatch_test.rs  row_scroll_test.rs
crates/compose-app/: Cargo.toml
crates/compose-app-shell/: Cargo.toml
crates/compose-app-shell/src/: lib.rs
crates/compose-app/src/: android.rs  desktop.rs  desktop_robot.rs  launcher.rs  lib.rs  recorder.rs  web.rs
crates/compose-core/: Cargo.toml
crates/compose-core/src/: chunked_slot_storage.rs  hash.rs  hierarchical_slot_storage.rs  lib.rs  runtime.rs  slot_backend.rs  slot_storage.rs  slot_table.rs  snapshot_id_set.rs  snapshot_state_observer.rs  split_slot_storage.rs  state.rs  subcompose.rs
crates/compose-foundation/: Cargo.toml
crates/compose-foundation/src/: gesture_constants.rs  lib.rs  measurement_proxy.rs  modifier.rs  scrollable.rs  velocity_tracker.rs
crates/compose-platform/android/: Cargo.toml
crates/compose-platform/desktop-winit/: Cargo.toml
crates/compose-platform/web/: Cargo.toml
crates/compose-render/common/: Cargo.toml
crates/compose-render/pixels/: Cargo.toml
crates/compose-render/wgpu/: Cargo.toml
crates/compose-testing/: Cargo.toml  README.md
crates/compose-testing/src/: lib.rs  robot.rs  robot_app.rs  robot_assertions.rs  robot_helpers.rs  test_renderer.rs  testing.rs  wgpu_robot.rs
crates/compose-ui/: Cargo.toml
crates/compose-ui/benches/: skip_recomposition.rs
crates/compose-ui/examples/: modifier_demo.rs  modifier_showcase.rs
crates/compose-ui/src/: debug.rs  fling_animation.rs  key_event.rs  lib.rs  modifier_nodes.rs  pointer_dispatch.rs  pointer_input_processor.rs  render_state.rs  renderer.rs  scroll.rs  subcompose_layout.rs  text.rs  text_field_focus.rs  text_field_handler.rs  text_field_input.rs  text_field_modifier_node.rs  text_layout_result.rs  text_modifier_node.rs
crates/compose-ui/tests/: button_clickable_test.rs  composition_switching_test.rs  conditional_rendering_test.rs  integration_modifier_tests.rs  intrinsics_test.rs  pointer_hover_gradient_test.rs  pointer_input_end_to_end_test.rs  pointer_input_integration_test.rs  render_invalidation_test.rs
crates/cranpose-app/: Cargo.toml
crates/cranpose-app-shell/: Cargo.toml  README.md
crates/cranpose-app-shell/src/: fps_monitor.rs  hit_path_tracker.rs  lib.rs
crates/cranpose-app/src/: android.rs  desktop.rs  launcher.rs  lib.rs  recorder.rs  web.rs
crates/cranpose-core/: Cargo.toml
crates/cranpose-core/src/: chunked_slot_storage.rs  collections.rs  composer_context.rs  frame_clock.rs  hash.rs  hierarchical_slot_storage.rs  launched_effect.rs  lib.rs  owned.rs  platform.rs  slot_backend.rs  slot_storage.rs  slot_table.rs  snapshot_double_index_heap.rs  snapshot_pinning.rs  snapshot_state_observer.rs  snapshot_weak_set.rs  split_slot_storage.rs  state.rs  subcompose.rs
crates/cranpose-foundation/: Cargo.toml  README.md
crates/cranpose-foundation/src/: gesture_constants.rs  lib.rs  measurement_proxy.rs  modifier.rs  modifier_helpers.rs
crates/cranpose-macros/: Cargo.toml
crates/cranpose-macros/src/: lib.rs
crates/cranpose-platform/desktop-winit/: Cargo.toml  README.md
crates/cranpose-platform/web/: Cargo.toml
crates/cranpose-render/common/: Cargo.toml  README.md
crates/cranpose-render/pixels/: Cargo.toml  README.md
crates/cranpose-render/wgpu/: Cargo.toml  README.md
crates/cranpose-testing/: Cargo.toml  README.md
crates/cranpose-testing/src/: lib.rs  robot.rs  robot_assertions.rs  robot_helpers.rs  testing.rs
crates/cranpose-ui/: Cargo.toml  README.md
crates/cranpose-ui-layout/: Cargo.toml  README.md
crates/cranpose-ui-layout/src/: alignment.rs  arrangement.rs  axis.rs  constraints.rs  core.rs  intrinsics.rs  lib.rs
crates/cranpose-ui/benches/: pipeline.rs  skip_recomposition.rs
crates/cranpose-ui/examples/: modifier_demo.rs  modifier_showcase.rs  test_node_duplication.rs
crates/cranpose-ui/src/: cursor_animation.rs  debug.rs  draw.rs  fling_animation.rs  focus_dispatch.rs  key_event.rs  lib.rs  modifier_nodes.rs  pointer_dispatch.rs  primitives.rs  (+10 more)
(+261 files in other folders)
