[workspace]
members = [
    "crates/compose-app-shell",
    "crates/compose-app",
    "crates/compose-assets",
    "crates/compose-core",
    "crates/compose-macros",
    "crates/compose-runtime-std",
    "crates/compose-ui-graphics",
    "crates/compose-ui-layout",
    "crates/compose-foundation",
    "crates/compose-animation",
    "crates/compose-ui",
    "crates/compose-testing",
    "crates/compose-platform/desktop-winit",
    "crates/compose-platform/android",
    "crates/compose-render/common",
    "crates/compose-render/pixels",
    "crates/compose-render/wgpu",
    "apps/desktop-demo",
    "apps/minimal-single-file",
]
resolver = "2"

[workspace.dependencies]
# Force android-activity to use native-activity feature across all workspace crates
android-activity = { version = "0.5", features = ["native-activity"] }
