[package]
name = "desktop-app"
version = "0.1.0"
edition = "2021"

# Support both binary (desktop) and cdylib (Android)
# IMPORTANT: The cdylib name (libdesktop_app.so) must match the android.app.lib_name
# in apps/android-demo/android/app/src/main/AndroidManifest.xml.
# Cargo converts hyphens to underscores: "desktop-app" → "libdesktop_app.so"
[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "desktop-app"
path = "src/main.rs"
required-features = ["desktop"]

[features]
default = ["renderer-wgpu", "desktop"]
renderer-pixels = ["compose-app/renderer-pixels"]
renderer-wgpu = ["compose-app/renderer-wgpu"]
desktop = ["compose-app/desktop"]
web = ["compose-app/web"]
android = ["compose-app/android"]

[dependencies]
compose-app = { path = "../../crates/compose-app", default-features = false }
compose-animation = { path = "../../crates/compose-animation" }
compose-core = { path = "../../crates/compose-core" }
compose-ui = { path = "../../crates/compose-ui" }
compose-foundation = { path = "../../crates/compose-foundation" }
env_logger = "0.10"
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
log = "0.4"

# Android-specific dependencies (only when building for Android)
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
console_log = "1.0"

[dev-dependencies]
compose-macros = { path = "../../crates/compose-macros" }
compose-testing = { path = "../../crates/compose-testing" }
