[package]
name = "desktop-app"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

# Support both binary (desktop) and cdylib (Android)
# IMPORTANT: The cdylib name (libdesktop_app.so) must match the android.app.lib_name
# in apps/android-demo/android/app/src/main/AndroidManifest.xml.
# Cargo converts hyphens to underscores: "desktop-app" → "libdesktop_app.so"
[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "desktop-app"
path = "src/main.rs"
required-features = ["desktop"]

[features]
default = ["renderer-wgpu", "desktop"]
renderer-pixels = ["compose-app/renderer-pixels"]
renderer-wgpu = ["compose-app/renderer-wgpu"]
desktop = ["compose-app/desktop"]
android = ["compose-app/android"]
web = ["compose-app/web", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:wasm-logger"]

[dependencies]
compose-app = { path = "../../crates/compose-app", default-features = false }
compose-animation = { path = "../../crates/compose-animation" }
compose-core = { path = "../../crates/compose-core" }
compose-ui = { path = "../../crates/compose-ui" }
compose-foundation = { path = "../../crates/compose-foundation" }
log = "0.4"
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wasm-logger = { version = "0.2", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }

# Non-WASM dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Android-specific dependencies (only when building for Android)
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { workspace = true }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"

[dev-dependencies]
compose-macros = { path = "../../crates/compose-macros" }
compose-testing = { path = "../../crates/compose-testing" }
