[package]
name = "desktop-app"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
# Enable wasm-opt with size optimization (can reduce WASM size by 20-40%)
# --all-features enables all standard WASM features that Rust 1.83+ uses by default
# (bulk-memory, nontrapping-float-to-int, sign-ext, mutable-globals)
wasm-opt = ["-Oz", "--all-features"]

# Support both binary (desktop) and cdylib (Android)
# IMPORTANT: The cdylib name (libdesktop_app.so) must match the android.app.lib_name
# in apps/android-demo/android/app/src/main/AndroidManifest.xml.
# Cargo converts hyphens to underscores: "desktop-app" → "libdesktop_app.so"
[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "desktop-app"
path = "src/main.rs"
required-features = ["desktop"]

[features]
default = ["renderer-wgpu", "desktop"]
renderer-pixels = ["compose-app/renderer-pixels"]
renderer-wgpu = ["compose-app/renderer-wgpu"]
desktop = ["compose-app/desktop"]
android = ["compose-app/android"]
web = ["compose-app/web", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:wasm-logger"]
# Enable real app robot testing
robot-app = ["compose-testing/robot-app", "logging"]
# Enable env_logger (adds ~600KB from regex)
logging = ["dep:env_logger"]

[dependencies]
compose-app = { path = "../../crates/compose-app", default-features = false }
compose-animation = { path = "../../crates/compose-animation" }
compose-core = { path = "../../crates/compose-core" }
compose-ui = { path = "../../crates/compose-ui" }
compose-foundation = { path = "../../crates/compose-foundation" }
log = "0.4"
instant = { version = "0.1", features = ["wasm-bindgen"] }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
wasm-logger = { version = "0.2", optional = true }
getrandom = { version = "0.3", features = ["wasm_js"] }

# Non-WASM dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { version = "0.10", optional = true }
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Android-specific dependencies (only when building for Android)
[target.'cfg(target_os = "android")'.dependencies]
android-activity = { workspace = true }

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Headers",
] }

[dev-dependencies]
compose-macros = { path = "../../crates/compose-macros" }
compose-testing = { path = "../../crates/compose-testing", features = ["robot-app"] }

# Robot test runners
[[example]]
name = "robot_interactive"
path = "robot-runners/robot_interactive.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_demo"
path = "robot-runners/robot_demo.rs"
required-features = ["robot-app"]



[[example]]
name = "robot_tabs_scroll"
path = "robot-runners/robot_tabs_scroll.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_offset_test"
path = "robot-runners/robot_offset_test.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_click_drag"
path = "robot-runners/robot_click_drag.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_async_tab_bug"
path = "robot-runners/robot_async_tab_bug.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_tab_scroll"
path = "robot-runners/robot_tab_scroll.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_tab_selection"
path = "robot-runners/robot_tab_selection.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_increment_bug"
path = "robot-runners/robot_increment_bug.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_tab_navigation"
path = "robot-runners/robot_tab_navigation.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_ui_breakage"
path = "robot-runners/robot_ui_breakage.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_async_pause"
path = "robot-runners/robot_async_pause.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_text_input"
path = "robot-runners/robot_text_input.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_reactive_state"
path = "robot-runners/robot_reactive_state.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_drag_selection"
path = "robot-runners/robot_drag_selection.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_double_click"
path = "robot-runners/robot_double_click.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_multiline_nav"
path = "robot-runners/robot_multiline_nav.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_copy_paste"
path = "robot-runners/robot_copy_paste.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_multiline_click"
path = "robot-runners/robot_multiline_click.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_list"
path = "robot-runners/robot_lazy_list.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_subcompose_lazy"
path = "robot-runners/robot_subcompose_lazy.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_subcompose_invalidation"
path = "robot-runners/robot_subcompose_invalidation.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_perf"
path = "robot-runners/robot_lazy_perf.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_max_demo"
path = "robot-runners/robot_lazy_max_demo.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_tab_test"
path = "robot-runners/robot_lazy_tab_test.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_fixes"
path = "robot-runners/robot_lazy_fixes.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_variable_height"
path = "robot-runners/robot_lazy_variable_height.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_complex_scroll"
path = "robot-runners/robot_lazy_complex_scroll.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_duplication_bug"
path = "robot-runners/robot_lazy_duplication_bug.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_infinite_scroll"
path = "robot-runners/robot_lazy_infinite_scroll.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_max_jump"
path = "robot-runners/robot_lazy_max_jump.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_lifecycle"
path = "robot-runners/robot_lazy_lifecycle.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_varheight_lifecycle"
path = "robot-runners/robot_lazy_varheight_lifecycle.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_extreme_nav"
path = "robot-runners/robot_lazy_extreme_nav.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_perf_validation"
path = "robot-runners/robot_lazy_perf_validation.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_recursive_layout"
path = "robot-runners/robot_recursive_layout.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_list_after_modifiers"
path = "robot-runners/robot_lazy_list_after_modifiers.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_list_end_start_dup"
path = "robot-runners/robot_lazy_list_end_start_dup.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_list_end_alignment"
path = "robot-runners/robot_lazy_list_end_alignment.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_list_remove_dup"
path = "robot-runners/robot_lazy_list_remove_dup.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_positioned_boxes_after_lazy_list"
path = "robot-runners/robot_positioned_boxes_after_lazy_list.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_content_type_reuse"
path = "robot-runners/robot_content_type_reuse.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_stats"
path = "robot-runners/robot_lazy_stats.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_recursive_composition"
path = "robot-runners/robot_lazy_recursive_composition.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_list_state_reactivity"
path = "robot-runners/robot_lazy_list_state_reactivity.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_items_rc"
path = "robot-runners/robot_lazy_items_rc.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_items_provider"
path = "robot-runners/robot_lazy_items_provider.rs"
required-features = ["robot-app"]

[[example]]
name = "robot_lazy_scroll_edge_cases"
path = "robot-runners/robot_lazy_scroll_edge_cases.rs"
required-features = ["robot-app"]
