[package]
name = "compose-app-shell"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Application orchestration shell for Compose-RS"

[dependencies]
compose-core = { path = "../compose-core" }
compose-runtime-std = { path = "../compose-runtime-std" }
compose-render-common = { path = "../compose-render/common" }
compose-ui = { path = "../compose-ui" }
compose-ui-graphics = { path = "../compose-ui-graphics" }
compose-foundation = { path = "../compose-foundation" }
log = "0.4"
# Use instant crate for cross-platform time support (works on native and WASM)
instant = { version = "0.1", features = ["wasm-bindgen"] }

[dev-dependencies]
compose-macros = { path = "../compose-macros" }
