[package]
name = "compose-app"
version = "0.1.0"
edition = "2021"

[features]
default = ["desktop", "renderer-pixels"]
desktop = ["compose-platform-desktop-winit", "dep:winit"]
android = ["compose-platform-android-winit", "dep:winit"]
renderer-pixels = ["compose-render-pixels", "dep:pixels"]
renderer-wgpu = ["compose-render-wgpu", "dep:wgpu", "dep:pollster"]

[dependencies]
compose-app-shell = { path = "../compose-app-shell" }
compose-platform-desktop-winit = { path = "../compose-platform/desktop-winit", optional = true }
compose-platform-android-winit = { path = "../compose-platform/android-winit", optional = true }
compose-render-pixels = { path = "../compose-render/pixels", optional = true }
compose-render-wgpu = { path = "../compose-render/wgpu", optional = true }
pixels = { version = "0.15", optional = true }
wgpu = { version = "0.19", optional = true }
pollster = { version = "0.3", optional = true }
winit = { version = "0.29", optional = true, features = ["android-native-activity"] }
log = "0.4"
