[package]
name = "compose-app"
version = "0.1.0"
edition = "2021"

[features]
default = ["desktop", "renderer-wgpu"]
desktop = ["compose-platform-desktop-winit", "dep:winit"]
android = ["compose-platform-android", "dep:android-activity", "dep:android_logger", "dep:raw-window-handle"]
web = ["compose-platform-web", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys"]
renderer-pixels = ["compose-render-pixels", "dep:pixels"]
renderer-wgpu = ["compose-render-wgpu", "dep:wgpu", "dep:pollster"]
robot = [] # Enable robot testing support (compose-ui now always included)

[dependencies]
compose-app-shell = { path = "../compose-app-shell" }
compose-ui = { path = "../compose-ui" }
compose-platform-desktop-winit = { path = "../compose-platform/desktop-winit", optional = true }
compose-platform-android = { path = "../compose-platform/android", optional = true }
compose-platform-web = { path = "../compose-platform/web", optional = true }
compose-render-pixels = { path = "../compose-render/pixels", optional = true }
compose-render-wgpu = { path = "../compose-render/wgpu", optional = true }
pixels = { version = "0.15", optional = true }
wgpu = { version = "25.0", optional = true }
pollster = { version = "0.4", optional = true }
winit = { version = "0.30", optional = true }
android-activity = { workspace = true, optional = true }
android_logger = { version = "0.14", optional = true }
raw-window-handle = { version = "0.6", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "Performance",
    "MouseEvent",
    "Touch",
    "TouchList",
    "TouchEvent",
    "PointerEvent",
    "WheelEvent",
    "KeyboardEvent",
    "CssStyleDeclaration",
    # Clipboard support
    "Navigator",
    "Clipboard",
    "ClipboardEvent",
    "DataTransfer",
] }
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
