[package]
name = "compose-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Core runtime for a Jetpack Compose inspired UI framework in Rust"

[dependencies]
futures-task = "0.3"
ahash = "0.8.12"
rustc-hash = "1.1.0"
smallvec = "1.15.1"

[features]
default = []
std-hash = []

[dev-dependencies]
compose-ui = { path = "../compose-ui" }
compose-macros = { path = "../compose-macros" }
compose-testing = { path = "../compose-testing" }
