[package]
name = "compose-testing"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Testing utilities and harness for Compose-RS"

[dependencies]
compose-app-shell = { version = "0.1.0", path = "../compose-app-shell" }
compose-app = { path = "../compose-app" }
compose-core = { path = "../compose-core" }
compose-foundation = { path = "../compose-foundation" }
compose-render-pixels = { version = "0.1.0", path = "../compose-render/pixels" }
compose-render-wgpu = { version = "0.1.0", path = "../compose-render/wgpu" }
compose-ui = { path = "../compose-ui" }
compose-ui-graphics = { version = "0.1.0", path = "../compose-ui-graphics" }
pollster = "0.3"
thiserror = "1"
wgpu = "0.19"

[dev-dependencies]
compose-macros = { path = "../compose-macros" }

[features]
default = []
