[package]
name = "compose-ui"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "UI primitives for Compose-RS"

[dependencies]
compose-core = { path = "../compose-core" }
compose-macros = { path = "../compose-macros" }
compose-runtime-std = { path = "../compose-runtime-std" }
compose-foundation = { path = "../compose-foundation" }
compose-ui-layout = { path = "../compose-ui-layout" }
compose-ui-graphics = { path = "../compose-ui-graphics" }
indexmap = "2"
smallvec = "1.13"
futures-task = "0.3"

[features]
default = []

[dev-dependencies]
criterion = "0.5"
compose-testing = { path = "../compose-testing" }

[[bench]]
name = "pipeline"
harness = false
