[package]
name = "cranpose-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Core runtime for a Jetpack Compose inspired UI framework in Rust"

[dependencies]
futures-task = "0.3"
ahash = "0.8.12"
rustc-hash = "2.1"
smallvec = "1.15.1"
log = "0.4"

[features]
default = []
std-hash = []

[dev-dependencies]
cranpose-ui = { path = "../cranpose-ui" }
cranpose-macros = { path = "../cranpose-macros" }
cranpose-testing = { path = "../cranpose-testing" }
