[package]
name = "compose-platform-desktop-winit"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Desktop winit platform adapter for Compose-RS"

[dependencies]
winit = "0.31.0-beta.2"
compose-foundation = { path = "../../compose-foundation" }
compose-ui-graphics = { path = "../../compose-ui-graphics" }
