[package]
name = "compose-render-common"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Common rendering contracts for Compose-RS"

[dependencies]
compose-foundation = { path = "../../compose-foundation" }
compose-ui-graphics = { path = "../../compose-ui-graphics" }
compose-ui = { path = "../../compose-ui" }
compose-core = { path = "../../compose-core" }
