[package]
name = "compose-render-pixels"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Pixels renderer backend for Compose-RS"

[dependencies]
compose-render-common = { path = "../common" }
compose-ui = { path = "../../compose-ui" }
compose-core = { path = "../../compose-core" }
compose-ui-graphics = { path = "../../compose-ui-graphics" }
compose-foundation = { path = "../../compose-foundation" }
once_cell = "1.18"
rusttype = "0.9"
log = "0.4"
lru = "0.12"
