[package]
name = "compose-render-wgpu"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "WGPU renderer backend for Compose-RS"

[dependencies]
compose-render-common = { path = "../common" }
compose-ui-graphics = { path = "../../compose-ui-graphics" }
compose-foundation = { path = "../../compose-foundation" }
compose-ui = { path = "../../compose-ui" }
compose-core = { path = "../../compose-core" }
wgpu = { version = "0.19", features = ["webgl"] }
bytemuck = { version = "1.14", features = ["derive"] }
glyphon = "0.5"
log = "0.4"
lru = "0.12"
