[package]
name = "cranpose-platform-web"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Web platform adapter for Cranpose"

[dependencies]
cranpose-foundation = { path = "../../cranpose-foundation" }
cranpose-ui-graphics = { path = "../../cranpose-ui-graphics" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlCanvasElement",
    "MouseEvent",
    "Touch",
    "TouchList",
    "TouchEvent",
    "PointerEvent",
    "WheelEvent",
    "KeyboardEvent",
] }
