[package]
name = "cranpose-render-pixels"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Pixels renderer backend for Cranpose"

[dependencies]
cranpose-render-common = { path = "../common" }
cranpose-ui = { path = "../../cranpose-ui" }
cranpose-core = { path = "../../cranpose-core" }
cranpose-ui-graphics = { path = "../../cranpose-ui-graphics" }
cranpose-foundation = { path = "../../cranpose-foundation" }
once_cell = "1.18"
rusttype = "0.9"
log = "0.4"
lru = "0.12"
